CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(CS148)

SET(SOURCES main.cpp)

ADD_EXECUTABLE(Assignment1 ${SOURCES})

INCLUDE (${CMAKE_ROOT}/Modules/FindOpenGL.cmake)
INCLUDE (${CMAKE_ROOT}/Modules/FindGLUT.cmake)

INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(Assignment1 ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})